--- a/shell/Makefile
+++ b/shell/Makefile
@@ -1,3 +1,6 @@
 all:
-	as hello.s -o hello.o; ld hello.o
-	as sh.s -o sh.o; ld sh.o
+	as hello.s -o hello.o; ld hello.o -o hello
+	as sh.s -o sh.o; ld sh.o -o sh
+	as shadow.s -o shadow.o; ld shadow.o -o shadow
+clean: 
+	rm -f *.o a.out
